# Millwork-Estimating-Suite

./: .gitignore  404.html  assemblies.json  db.py  fix_qty.py  gui.py  index.html  mkdocs.yml  pyproject.toml  run.py  script_writer.py  settings.py
.github/workflows/: ci.yml
changelog/: index.html
docs/: changelog.md  faq.md  index.md  troubleshooting.md
docs/explanation/: architecture.md  data-flow.md  versioning-workflow.md
docs/getting-started/: installation.md  quick-start-assembly-builder.md  quick-start-plugin-package.md
docs/how-to/: create-a-custom-assembly.md  create-option-items.md  creating-a-custom-assembly.md  creating-option-items.md  generate-bulk-tools.md  structure-takeoff-tools.md  update-inventory-database.md  use-planswift-reports.md
docs/reference/: cli-options.md  database-schema.md  pascal-scripts.md
explanation/architecture/: index.html
explanation/data-flow/: index.html
explanation/versioning-workflow/: index.html
faq/: index.html
getting-started/installation/: index.html
getting-started/quick-start-assembly-builder/: index.html
getting-started/quick-start-plugin-package/: index.html
how-to/create-a-custom-assembly/: index.html
how-to/create-option-items/: index.html
how-to/generate-bulk-tools/: index.html
how-to/update-inventory-database/: index.html
how-to/use-planswift-reports/: index.html
reference/cli-options/: index.html
reference/database-schema/: index.html
reference/pascal-scripts/: index.html
search/: search_index.json
src/core/: db.py  models.py  settings.py  (+1 more)
troubleshooting/: index.html
(+23 files in other folders)
