[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "millwork-builder"
version = "0.1.0"
dependencies = ["pdfplumber", "ttkbootstrap", ...]
requires-python = ">=3.10"

[tool.setuptools.package-data]
"millwork_builder.resources" = [
    "*.psscript",
    "*.json",
    "*.ico"
]
